// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Crypto Endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 3106.9885,
  },
  "result": 3106.9885,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1659338094909,
    "providerDataStreamEstablished": 1659338094909,
    "providerIndicatedTime": 1659338094909,
  },
}
`;

exports[`Forex endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 0.7819647646677041,
  },
  "result": 0.7819647646677041,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1659338094909,
    "providerDataStreamEstablished": 1659338094909,
    "providerIndicatedTime": 1659338092107,
  },
}
`;
